add city and area tbls

--- a/appsettings.json
+++ b/appsettings.json
@@ -14,5 +14,10 @@
     },
     "ConnectionStrings": {
         "DefaultConnection": "workstation id=dbuniversal.mssql.somee.com;packet size=4096;user id=ritser_SQLLogin_1;pwd=fe9qo5fogt;data source=dbuniversal.mssql.somee.com;persist security info=False;initial catalog=dbuniversal;TrustServerCertificate=True"
+    },
+    "Claoudinary": {
+        "cloudName": "dianvimfq",
+        "apiKey": "941658135944832",
+        "apiSecret": "RHs_LJRlB84PJwCXBpufIxc5YC4"
     }
 }
